<resources>
    <string name="app_name">Punchtime</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="placeholder_email">Press here to go to settings</string>
    <string name="placeholder_user">Not logged in</string>
    <string name="menu_dashboard">Dashboard</string>
    <string name="menu_history">History</string>
    <string name="menu_day">Day</string>
    <string name="menu_3_day">3 Day</string>
    <string name="menu_week">Week</string>
    <string name="menu_stats">Statistics</string>
    <string name="settings">Settings</string>
    <string name="logout_dialog_message">Are you sure you want to log out? You will have to login in again to continue using the app</string>
    <string name="logout_dialog_title">Logout</string>
    <string name="time_today_title">Today</string>
    <string name="time_here_title">Current checkin</string>
    <string name="time_today_content">-</string>
    <string name="time_here_content">-</string>
    <string name="last_checkin">Current checkin location</string>
    <string name="add_a_note">Add a note</string>
    <string name="write_current_note_message">Write a note for your current checkin</string>
    <string name="no_note_added">No note was added</string>
    <string name="edit_note">Edit note</string>
    <string name="info_pulse_title">Info for this pulse</string>
    <string name="account">Account</string>
    <string name="logged_in_summary">Logged in, tap to logout</string>
    <string name="not_logged_in_summary">Not logged in, tap to login</string>
    <string name="location_mode_summary">Check in and out automatically based on location</string>
    <string name="location_mode_title">Automatic tracking</string>
    <string name="logged_in_facebook">Logged in with Facebook</string>
    <string name="logged_in_twitter">Logged in with Twitter</string>
    <string name="location_rationale">Location permission is required for this app to function. Please enable it in the settings</string>
    <string name="ok">OK</string>
    <string name="placeholder_street">You are not checked in</string>
    <string name="placeholder_city">Tap the green pin button to checkin</string>
    <string name="login_rationale">In order to checkin at a location you need te be logged in. Please do so in the settings.</string>
    <string name="loading">Loading …</string>
    <string name="no_location_error_message">Could not retrieve location, please try again</string>
    <string name="show_on_map">Show on map</string>
    <string name="recenter_map_on_current_location">Recenter map on current location</string>
    <string name="add_company_summary">Add yourself to a company from an invitation</string>
    <string name="add_company_title">Join company</string>
    <string name="add_company_dialog_title">Enter an invitation</string>
    <string name="checkin_message">Checked in at current location</string>
    <string name="checkout_message">Checked out at current location</string>
    <string name="map_detail_title">Map Detail</string>
    <string name="close">Close</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="recenter_button_text">Recenter</string>
    <string name="current_company_summary">This is the company you\'re currently working for</string>
    <string name="current_company_title">Current company</string>
    <string name="invitation_prompt">Enter invitation code</string>
    <string name="contact_title">Contact</string>
    <string name="contact_summary">Contact your employer directly</string>
    <string name="email_title">Send an email</string>
    <string name="invitation_claimed_title">Invitation code error</string>
    <string name="invitation_claimed_text">This invite code has already been claimed</string>
    <string name="invitation_success_title">Success</string>
    <string name="invitation_success_text">"You have successfully joined "</string>
    <string name="invitation_error_title">Invitation code error</string>
    <string name="invitation_error_text">Please verify that you entered the right code and try again.</string>
    <string name="stats_week_description">Hours worked this week</string>
    <string name="stats_today_description">Hours worked today</string>
    <string name="hours_quota_summary">Specify your working hours so the app can track them</string>
    <string name="hours_quota_day">Working hours</string>
    <string name="hours_quota_day_summary">The amount of time you work per day (in hours)</string>
    <string name="hours_quota_week">Amount of working days</string>
    <string name="hours_quota_week_summary">The amount of days you work per week</string>
    <string-array name="pref_day_entries">
        <item>1 Hour</item>
        <item>2 Hours</item>
        <item>3 Hours</item>
        <item>4 Hours</item>
        <item>5 Hours</item>
        <item>6 Hours</item>
        <item>7 Hours</item>
        <item>8 Hours</item>
        <item>9 Hours</item>
        <item>10 Hours</item>
        <item>11 Hours</item>
        <item>12 Hours</item>
    </string-array>

    <string-array name="pref_day_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>

    <string name="pref_day_default">8</string>

    <string-array name="pref_week_entries">
        <item>1 Day</item>
        <item>2 Days</item>
        <item>3 Days</item>
        <item>4 Days</item>
        <item>5 Days</item>
        <item>6 Days</item>
        <item>7 Days</item>
    </string-array>

    <string-array name="pref_week_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
    </string-array>

    <string name="pref_week_default">5</string>
</resources>
