<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.activities.MainActivity"
    tools:showIn="@layout/activity_main">

    <fragment
        class="com.google.android.gms.maps.SupportMapFragment"
        android:id="@+id/map"
        android:layout_width="match_parent"
        android:layout_height="@dimen/map_height"
        android:layout_weight="0.3"
        android:layout_gravity="top"
        map:cameraZoom="13"
        map:mapType="normal"
        map:liteMode="true"
        />

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.25"
        android:orientation="horizontal"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="16dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:baselineAligned="false">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="0.5">
                    <android.support.v7.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:alpha="0.87"
                        android:gravity="center"
                        android:text="@string/time_today_title"/>
                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/timeToday"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:gravity="center"
                        android:text="@string/time_today_content"/>
                </LinearLayout>
                <View
                    android:layout_width="2dp"
                    android:layout_height="match_parent"
                    android:background="?android:attr/listDivider"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="0.5">
                    <android.support.v7.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:alpha="0.87"
                        android:textAlignment="center"
                        android:text="@string/time_here_title"/>
                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/timeHere"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:gravity="center"
                        android:text="@string/time_here_content"/>
                </LinearLayout>
            </LinearLayout>

    </android.support.v7.widget.LinearLayoutCompat>


    <android.support.v7.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/colorPrimary"
        android:layout_margin="8dp"
        android:layout_weight="0.45"
        android:layout_gravity="bottom"
        app:layout_behavior="io.punchtime.punchtime.ui.behaviors.AvoidSnackbarBehavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/last_checkin"
                android:background="@color/colorPrimaryDark"
                android:textColor="#FFFFFF"
                android:alpha="0.7"
                android:paddingLeft="16dp"
                android:paddingStart="16dp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/fab_margin">

                <TextView
                    android:id="@+id/streetText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/loading"
                    android:textSize="20sp"
                    android:textColor="#FFFFFF"/>

                <TextView
                    android:id="@+id/cityText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:alpha="0.7"
                    android:textColor="@color/cardview_light_background"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp">

                <Button
                    android:id="@+id/noteButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_a_note"
                    style="?attr/borderlessButtonStyle"
                    android:textColor="@color/colorAccent" />

                <Button
                    android:id="@+id/showMapButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Show on map"
                    style="?attr/borderlessButtonStyle"
                    android:textColor="@color/colorAccent" />
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_anchor="@id/map"
        app:layout_anchorGravity="bottom|right|end"
        android:layout_margin="@dimen/fab_margin"
        android:visibility="invisible"
        android:clickable="true" />


</android.support.design.widget.CoordinatorLayout>
